Fix flicker.

--- a/src/sass/components/yith/layout/_chronology.scss
+++ b/src/sass/components/yith/layout/_chronology.scss
@@ -149,6 +149,7 @@
     position: fixed;
     right: 0;
     bottom: 0;
+    background-color: $primary;
 
     @include breakpoints(xs, sm) {
       width: 100%;
